--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services: 
-  
+
   nextjs-ui:
     build:
       context: ./docker/dev/nextjs
@@ -11,3 +11,23 @@ services:
     stdin_open: true
     volumes:
         - ./frontend:/app
+    environment: 
+      - API_TARGET=http://laravel-api:8080
+
+  laravel-api:
+    build:
+      context: ./docker/dev/php
+    environment:
+      - XDEBUG_CONFIG="remote_host=172.17.0.1"
+      - PHP_IDE_CONFIG="serverName=laravel.local"
+    volumes:
+        - ./backend:/app
+
+  composer:
+    build:
+      context: ./docker/dev/php-composer
+    environment:
+      - XDEBUG_CONFIG="remote_host=172.17.0.1"
+      - PHP_IDE_CONFIG="serverName=laravel.local"
+    volumes:
+        - ./backend:/app
