--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - PHP_IDE_CONFIG="serverName=laravel.local"
     volumes:
         - ./backend:/app
+        - ./docker/dev/php/php-ini-overrides.ini:/usr/local/etc/php/conf.d/99-overrides.ini
 
   composer:
     build:
@@ -33,5 +34,6 @@ services:
     environment:
       - XDEBUG_CONFIG="remote_host=172.17.0.1"
       - PHP_IDE_CONFIG="serverName=laravel.local"
+    user: 1000:82
     volumes:
         - ./backend:/app
