--- a/docker/dev/php/php-ini-overrides.ini
+++ b/docker/dev/php/php-ini-overrides.ini
@@ -1,13 +1,14 @@
 upload_max_filesize = 100M
 post_max_size = 108M
 
-xdebug.idekey = "PHPSTORM"
-xdebug.remote_enable = On
-xdebug.remote_autostart = Off
-xdebug.remote_connect_back = On
-xdebug.remote_port = "9000"
-xdebug.remote_handler = dbgp
-xdebug.profiler_enable_trigger = On
-xdebug.profiler_enable_trigger_value = "PHPSTORM"
-xdebug.trace_enable_trigger = On
-xdebug.trace_enable_trigger_value = "PHPSTORM"
+xdebug.mode = debug
+xdebug.client_port=9000
+xdebug.client_host=172.17.0.1
+xdebug.remote_handler=dbgp
+xdebug.start_with_request=yes
+xdebug.discover_client_host=0
+xdebug.idekey=PHPSTORM
+xdebug.show_error_trace = 1
+xdebug.max_nesting_level=250
+xdebug.var_display_max_depth=10
+xdebug.log=/var/log/xdebug.log
