--- a/docker/dev/php/usr/local/etc/php/conf.d/custom.ini
+++ b/docker/dev/php/usr/local/etc/php/conf.d/custom.ini
@@ -8,17 +8,6 @@ php_max_execution_time = 60000
 max_execution_time = 60000
 request_terminate_timeout = 60000
 
-xdebug.idekey = "PHPSTORM"
-xdebug.remote_enable = On
-xdebug.remote_autostart = Off
-xdebug.remote_connect_back = On
-xdebug.remote_port = "9000"
-xdebug.remote_handler = dbgp
-xdebug.profiler_enable_trigger = On
-xdebug.profiler_enable_trigger_value = "PHPSTORM"
-xdebug.trace_enable_trigger = On
-xdebug.trace_enable_trigger_value = "PHPSTORM"
-xdebug.trace_output_dir = /var/www/html/source/tmp/
-xdebug.profiler_output_dir = /var/www/html/source/tmp/
-xdebug.profiler_output_name = cachegrind.%u.%s.out
+xdebug.mode = "debug"
+
 #xdebug.remote_log = /var/www/html/source/tmp/xdebug.log
