disable unneeded providers

--- a/docker/dev/php/php-ini-overrides.ini
+++ b/docker/dev/php/php-ini-overrides.ini
@@ -12,3 +12,7 @@ xdebug.show_error_trace = 1
 xdebug.max_nesting_level=250
 xdebug.var_display_max_depth=10
 xdebug.log=/var/log/xdebug.log
+
+opcache.enable=1
+opcache.jit_buffer_size=100M
+opcache.jit=tracing
