--- a/docker/dev/php/usr/local/etc/php/conf.d/custom.ini
+++ b/docker/dev/php/usr/local/etc/php/conf.d/custom.ini
@@ -10,4 +10,8 @@ request_terminate_timeout = 60000
 
 xdebug.mode = "debug"
 
+opcache.enable=1
+opcache.jit_buffer_size=100M
+opcache.jit=tracing
+
 #xdebug.remote_log = /var/www/html/source/tmp/xdebug.log
