--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
   laravel-api:
     build:
       context: ./docker/dev/php
+    depends_on:
+      - db
     ports:
       - 8000:8000
     environment:
@@ -28,6 +30,21 @@ services:
     volumes:
         - ./backend:/app
         - ./docker/dev/php/php-ini-overrides.ini:/usr/local/etc/php/conf.d/99-overrides.ini
+
+  db:
+    image: mysql:8.0
+    container_name: db
+    restart: unless-stopped
+    tty: true
+    volumes:
+      - ./docker/dev/db/mysql:/var/lib/mysql
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: laravel
+      MYSQL_ROOT_PASSWORD: root
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
 
   composer:
     build:
