--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=laraveluser
+DB_PASSWORD=your_laravel_db_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -47,3 +47,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+JWT_SECRET=
