--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
+    "http-proxy-middleware": "1.1.0",
     "next": "10.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "http-proxy-middleware": "1.1.0"
+    "react-cookie": "^4.0.3",
+    "react-dom": "17.0.2"
   }
 }
