--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -2,7 +2,7 @@ on: push
 
 jobs:
 
-  build-and-publish-docker-php-head:
+  build-docker-php-head:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/develop' # Running this job only for develop branch
 
@@ -28,7 +28,7 @@ jobs:
           pull-image: true # Raise the flag to try to pull image
 
 
-  build-and-publish-docker-php-composer-head:
+  build-docker-php-composer-head:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/develop' # Running this job only for develop branch
 
@@ -51,3 +51,32 @@ jobs:
           build-context: ./docker/dev/php-composer/
           image-tag: head # Provide Docker image tag
           pull-image: true # Raise the flag to try to pull image
+
+  phpunit:
+    runs-on: ubuntu-20.04
+    needs:
+      - build-docker-php-head
+      - build-docker-php-composer-head
+    if: ${{ (needs.build-docker-php-head.result == 'success' || needs.build-docker-php-head.result == 'skipped') && (needs.build-docker-php-composer-head.result == 'success' || needs.build-docker-php-composer-head.result == 'skipped')  && always() }}
+    steps:
+      - uses: actions/checkout@v2 # Checking out the repo
+      - name: Set vars # TODO change head tag to latest once master build is in
+        run: |
+          echo "REPO_NAME=${{ github.repository }}" >> $GITHUB_ENV
+          if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
+            echo "IMAGE_TAG=head" >> $GITHUB_ENV
+          else
+            echo "IMAGE_TAG=head" >> $GITHUB_ENV
+          fi
+      - name: Login to github registry
+        uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: PHPUnit
+        run: |
+          echo ${{ env.REPO_NAME }}
+          echo ${{ env.IMAGE_TAG }}
+          docker run -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} composer install
+          docker run -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} php artisan test
