--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,5 +14,10 @@
     "react": "17.0.2",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/http-proxy-middleware": "^1.0.0",
+    "typescript": "^4.2.4"
   }
 }
