--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -60,7 +60,14 @@ jobs:
     if: ${{ (needs.build-docker-php-head.result == 'success' || needs.build-docker-php-head.result == 'skipped') && (needs.build-docker-php-composer-head.result == 'success' || needs.build-docker-php-composer-head.result == 'skipped')  && always() }}
     steps:
       - uses: actions/checkout@v2 # Checking out the repo
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            backend:
+              - 'backend/**'
       - name: Set vars # TODO change head tag to latest once master build is in
+        if: steps.changes.outputs.backend == 'true'
         run: |
           echo "REPO_NAME=${{ github.repository }}" >> $GITHUB_ENV
           if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
@@ -80,3 +87,29 @@ jobs:
           echo ${{ env.IMAGE_TAG }}
           docker run -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} composer install
           docker run -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} php artisan test
+
+#  deploy-storybook:
+#   runs-on: ubuntu-latest
+#   needs: phpunit
+#   steps:
+#     - name: Checkout 🛎️
+#       uses: actions/checkout@v2
+#       with:
+#         persist-credentials: false
+#     - uses: dorny/paths-filter@v2
+#       id: changes
+#       with:
+#         filters: |
+#           frontend:
+#             - 'frontend/**'
+#     - name: Build and Publish head Docker PHP Composer image
+#       if: steps.changes.outputs.frontend == 'true'
+#     - name: Install and Build 🔧
+#       run: | # Install npm packages and build the Storybook files
+#         npm install
+#         npm run build-storybook
+#     - name: Deploy 🚀
+#       uses: JamesIves/github-pages-deploy-action@4.1.1
+#       with:
+#         branch: main # The branch the action should deploy to.
+#         folder: docs-build # The folder that the build-storybook script generates files.
