--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,18 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "cookie": "^0.4.1",
     "http-proxy-middleware": "1.1.0",
     "next": "10.1.2",
+    "next-transpile-modules": "^6.4.0",
     "react": "17.0.2",
     "react-cookie": "^4.0.3",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-style-reset": "^1.3.2",
+    "react-styled-flexboxgrid": "^3.2.1",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
@@ -25,6 +31,7 @@
     "@storybook/react": "^6.2.7",
     "@types/express": "^4.17.11",
     "@types/http-proxy-middleware": "^1.0.0",
+    "@types/styled-components": "^5.1.9",
     "babel-loader": "^8.2.2",
     "typescript": "^4.2.4"
   }
