--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,8 +22,9 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "next.config.js", "next.config.js"  ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "stories"
   ]
 }
