only run phpunit on changes

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -76,12 +76,14 @@ jobs:
             echo "IMAGE_TAG=head" >> $GITHUB_ENV
           fi
       - name: Login to github registry
+        if: steps.changes.outputs.backend == 'true'
         uses: docker/login-action@v1
         with:
           registry: docker.pkg.github.com
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: PHPUnit
+        if: steps.changes.outputs.backend == 'true'
         run: |
           echo ${{ env.REPO_NAME }}
           echo ${{ env.IMAGE_TAG }}
