--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/node": "^14.14.37",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "cookie": "^0.4.1",
