--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,13 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "buil-storybook": "build-storybook",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@types/node": "^14.14.37",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
     "cookie": "^0.4.1",
     "http-proxy-middleware": "1.1.0",
     "next": "10.1.2",
-    "next-transpile-modules": "^6.4.0",
     "react": "17.0.2",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
@@ -32,8 +29,13 @@
     "@storybook/react": "^6.2.7",
     "@types/express": "^4.17.11",
     "@types/http-proxy-middleware": "^1.0.0",
+    "@types/node": "^14.14.37",
     "@types/styled-components": "^5.1.9",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "babel-loader": "^8.2.2",
+    "cypress": "^7.0.1",
+    "next-transpile-modules": "^6.4.0",
     "typescript": "^4.2.4"
   }
 }
