move cypress to seperate dir

--- a/docker/dev/cypress/Dockerfile
+++ b/docker/dev/cypress/Dockerfile
@@ -1,8 +1,8 @@
 FROM cypress/browsers:node14.16.0-chrome89-ff86
 
-RUN yarn global add cypress && \
+RUN npm i -g cypress && \
     cypress install && cypress verify && cypress info && \
-    yarn cache clean --mirror && \
-    apt-get install -y tar wget && \
+    npm cache clean --force && \
+    apt-get install -y tar && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* 
