start on file replacing

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -141,7 +141,20 @@ jobs:
   e2eTests:
     runs-on: ubuntu-latest
     steps:
+      run: |
+        echo "REPO_NAME=${{ github.repository }}" >> $GITHUB_ENV
+        if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
+          echo "IMAGE_TAG=head" >> $GITHUB_ENV
+        else
+          echo "IMAGE_TAG=head" >> $GITHUB_ENV
+        fi
       - uses: actions/checkout@v2
+      - name: Generate new docker-compose.test.yml
+        run: |
+          sed -i 's%###_PHP_COMPOSER_IMAGE_###%docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }}%g' docker-compose.test.yml
+          sed -i 's%###_NEXTJS_IMAGE_###%docker.pkg.github.com/${{ env.REPO_NAME }}/php:${{ env.IMAGE_TAG }}%g' docker-compose.test.yml
+          sed -i 's%###_LARAVEL_IMAGE_###%docker.pkg.github.com/${{ env.REPO_NAME }}/nextjs:${{ env.IMAGE_TAG }}%g' docker-compose.test.yml
+          cat docker-compose.test.yml
       - name: Build the stack
         run: docker-compose -f docker-compose.test.yml up #-d once its running
 
