--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -94,7 +94,7 @@ jobs:
         uses: VaultVulp/gp-docker-action@1.1.7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }} # Provide GITHUB_TOKEN to login into the GitHub Packages
-          image-name: cypress # Provide Docker image name
+          image-name: nextjs # Provide Docker image name
           dockerfile: ./docker/dev/nextjs/Dockerfile
           build-context: ./docker/dev/nextjs/
           image-tag: head # Provide Docker image tag
