--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,9 +9,51 @@ services:
 
   composer:
     image: ###_PHP_COMPOSER_IMAGE_###
+    environment:
+      - XDEBUG_CONFIG="remote_host=172.17.0.1"
+      - PHP_IDE_CONFIG="serverName=laravel.local"
+    user: 1000:82
+    volumes:
+      - ./backend:/app
+
+  db:
+    image: mysql:8.0
+    container_name: db
+    restart: unless-stopped
+    tty: true
+    volumes:
+      - ./docker/dev/db/mysql:/var/lib/mysql
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: laravel
+      MYSQL_ROOT_PASSWORD: root
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
 
   nextjs-ui:
     image: ###_NEXTJS_IMAGE_###
+    ports:
+      - 3000:3000
+    depends_on:
+      - laravel-api
+    container_name: nextjs-ui
+    stdin_open: true
+    volumes:
+      - ./frontend:/app
+    environment:
+      - API_TARGET=http://laravel-api:8000
 
   laravel-api:
     image: ###_LARAVEL_IMAGE_###
+    depends_on:
+      - db
+    ports:
+      - 8000:8000
+    environment:
+      - XDEBUG_CONFIG="remote_host=172.17.0.1"
+      - PHP_IDE_CONFIG="serverName=laravel.local"
+    user: 1000:82
+    volumes:
+      - ./backend:/app
+      - ./docker/dev/php/php-ini-overrides.ini:/usr/local/etc/php/conf.d/99-overrides.ini
