--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -163,7 +163,10 @@ jobs:
           sed -i 's%###_LARAVEL_IMAGE_###%docker.pkg.github.com/${{ env.REPO_NAME }}/php:${{ env.IMAGE_TAG }}%g' docker-compose.test.yml
           cat docker-compose.test.yml
       - name: Build the stack
-        run: docker-compose -f docker-compose.test.yml up #-d once its running
+        run: docker-compose -f docker-compose.test.yml up -d
+      - name: run cypress
+        run: docker run -it -v $(pwd):/app docker.pkg.github.com/${{ env.REPO_NAME }}/cypress:${{ env.IMAGE_TAG }} /bin/bash -c "cd app/cypress && npm i && npm run cy:run"
+
 
 #  deploy-storybook:
 #   runs-on: ubuntu-latest
