--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -167,7 +167,7 @@ jobs:
           docker-compose -f docker-compose.test.yml up -d
           docker network ls
       - name: run cypress
-        run: docker run --network="nextlara_default" -v $(pwd):/app docker.pkg.github.com/${{ env.REPO_NAME }}/cypress:${{ env.IMAGE_TAG }} /bin/bash -c "cd app/cypress && npm i && npm run cy:run"
+        run: docker run --network="laravel-next-serverless_default" -v $(pwd):/app docker.pkg.github.com/${{ env.REPO_NAME }}/cypress:${{ env.IMAGE_TAG }} /bin/bash -c "cd app/cypress && npm i && npm run cy:run"
 
 
 #  deploy-storybook:
