--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -164,7 +164,7 @@ jobs:
           cat docker-compose.test.yml
       - name: Build the stack
         run: |
-          docker-compose -f docker-compose.test.yml up -d
+          docker-compose -f docker-compose.test.yml up
           docker network ls
       - name: run cypress
         run: docker run --network="laravel-next-serverless_default" --env-file <(env | grep cypress_) -v $(pwd):/app docker.pkg.github.com/${{ env.REPO_NAME }}/cypress:${{ env.IMAGE_TAG }} /bin/bash -c "cd app/cypress && npm i && npm run cy:run"
