--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -172,6 +172,8 @@ jobs:
           docker run -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} chmod -R 755 /app/storage
           docker-compose -f docker-compose.test.yml up -d
           docker network ls
+          docker-compose ps
+          docker network inspect laravel-next-serverless_default
       - name: Sleep for 10 seconds #wait on mysql init
         uses: jakejarvis/wait-action@master
         with:
