--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -183,7 +183,7 @@ jobs:
       - name: run cypress
         run: |
           export FRONTEND_IP=$(docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' nextjs-ui)
-          docker run --network="laravel-next-serverless_default" --env-file <(env | grep cypress_) --env cypress_base_url="http://$FRONTEND_IP" -v $(pwd):/app docker.pkg.github.com/${{ env.REPO_NAME }}/cypress:${{ env.IMAGE_TAG }} /bin/bash -c "cd app/cypress && npm i && npm run cy:run"
+          docker run --network="host" --env-file <(env | grep cypress_) --env cypress_base_url="http://$FRONTEND_IP" -v $(pwd):/app docker.pkg.github.com/${{ env.REPO_NAME }}/cypress:${{ env.IMAGE_TAG }} /bin/bash -c "cd app/cypress && npm i && npm run cy:run"
         env:
           cypress_watchForFileChanges: false
           cypress_numTestsKeptInMemory: 0
