--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -164,8 +164,6 @@ jobs:
           cat docker-compose.test.yml
       - name: Build the stack
         run: |
-          docker run -v $(pwd)/frontend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/nextjs:${{ env.IMAGE_TAG }} npm i
-          docker run -v $(pwd)/frontend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/nextjs:${{ env.IMAGE_TAG }} npm run build
           cp $(pwd)/backend/.env.example $(pwd)/backend/.env
           touch $(pwd)/backend/storage/logs/laravel.log && chmod +rw $(pwd)/backend/storage/logs/laravel.log
           docker run -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} composer install
@@ -175,18 +173,23 @@ jobs:
           docker run -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} php artisan route:list
           docker run -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} chown -R $(id -u):www-data /app
           docker run -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} chmod -R 755 /app/storage
-          docker-compose -f docker-compose.test.yml up -d
+          docker-compose -f docker-compose.test.yml up -d db laravel-api
           docker network ls
           docker-compose ps
           docker network inspect laravel-next-serverless_default
-      - name: Sleep for 10 seconds #wait on mysql init
+      - name: Sleep for 10 seconds # wait on mysql init
         uses: jakejarvis/wait-action@master
         with:
           time: '10s'
+      - name: Build frontend # we need api to be up for getServerSideProps
+        run:  |
+          docker run -v $(pwd)/frontend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/nextjs:${{ env.IMAGE_TAG }} npm i
+          docker run -v $(pwd)/frontend:/app --env API_TARGET="http://laravel-api:8000" docker.pkg.github.com/${{ env.REPO_NAME }}/nextjs:${{ env.IMAGE_TAG }} npm run build
       - name: Laravel migrate
         run: docker run --network="laravel-next-serverless_default" -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} php artisan migrate
-      - name: run cypress
+      - name: run cypress # start nextjs-ui container now that everything is available
         run: |
+          docker-compose -f docker-compose.test.yml up nextjs-ui
           docker run --network="laravel-next-serverless_default" --env-file <(env | grep cypress_) -v $(pwd):/app docker.pkg.github.com/${{ env.REPO_NAME }}/cypress:${{ env.IMAGE_TAG }} /bin/bash -c "cd app/cypress && npm i && npm run cy:run"
         env:
           cypress_base_url: "http://nextjs-ui:3000"
