--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -189,7 +189,7 @@ jobs:
         run: docker run --network="laravel-next-serverless_default" -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} php artisan migrate
       - name: run cypress # start nextjs-ui container now that everything is available
         run: |
-          docker-compose -f docker-compose.test.yml up nextjs-ui
+          docker-compose -f docker-compose.test.yml up -d nextjs-ui
           docker run --network="laravel-next-serverless_default" --env-file <(env | grep cypress_) -v $(pwd):/app docker.pkg.github.com/${{ env.REPO_NAME }}/cypress:${{ env.IMAGE_TAG }} /bin/bash -c "cd app/cypress && npm i && npm run cy:run"
         env:
           cypress_base_url: "http://nextjs-ui:3000"
