--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -186,7 +186,9 @@ jobs:
           docker run -v $(pwd)/frontend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/nextjs:${{ env.IMAGE_TAG }} npm i
           docker run -v $(pwd)/frontend:/app --env API_TARGET="http://laravel-api:8000" docker.pkg.github.com/${{ env.REPO_NAME }}/nextjs:${{ env.IMAGE_TAG }} npm run build
       - name: Laravel migrate
-        run: docker run --network="laravel-next-serverless_default" -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} php artisan migrate
+        run: |
+          docker run --network="laravel-next-serverless_default" -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} php artisan db:seed
+          docker run --network="laravel-next-serverless_default" -v $(pwd)/backend:/app docker.pkg.github.com/${{ env.REPO_NAME }}/php-composer:${{ env.IMAGE_TAG }} php artisan migrate
       - name: run cypress # start nextjs-ui container now that everything is available
         run: |
           docker-compose -f docker-compose.test.yml up -d nextjs-ui
@@ -196,7 +198,7 @@ jobs:
           cypress_watchForFileChanges: false
           cypress_numTestsKeptInMemory: 0
           cypress_retries: 2
-          cypress_videoUploadOnPasses: false
+          cypress_video: false
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
