--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -209,8 +209,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: cypress
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           persist-credentials: false
       - uses: dorny/paths-filter@v2
