--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "buil-storybook": "build-storybook"
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "cookie": "^0.4.1",
