--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@storybook/addon-actions": "^6.2.8",
+    "@storybook/addon-docs": "^6.2.8",
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
     "@storybook/react": "^6.2.8",
