--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -15,6 +15,12 @@ jobs:
           else
             echo "IMAGE_TAG=head" >> $GITHUB_ENV
           fi
+      - name: Login to github registry
+        uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build
         run: |
           cp $(pwd)/backend/.env.example $(pwd)/backend/.env
